--- a/src/common/envs/development.env
+++ b/src/common/envs/development.env
@@ -5,5 +5,7 @@ BASE_URL=http://localhost:3000
 DATABASE_HOST=localhost
 DATABASE_NAME=novintex_bot
 DATABASE_USER=postgres
-DATABASE_PASSWORD=09211953839
+DATABASE_PASSWORD=123456
 DATABASE_PORT=5432
+
+TELEGRAM_TOKEN_DEV=5380617566:AAGNYy2DvzbMRTdOtJazVhPv8I6dEclKTiI
