--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.4.0",
     "telegraf": "^4.8.2",
-    "typeorm": "^0.2.45",
-    "uuid": "^8.3.2"
+    "typeorm": "^0.2.45"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
