--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/typeorm": "^8.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "nestjs-pino": "^2.6.0",
     "pg": "^8.7.3",
+    "pino-http": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
